<resources>
    <string name="app_name">FinalProject</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="activity_main_scan_button">Scan</string>
    <string name="activity_main_status_text">status</string>
    <string name="activity_remote_control_up_button">UP</string>
    <string name="activity_remote_control_title">REMOTE CONTROL</string>
    <string name="activity_remote_control_status_textview">Idle</string>
    <string name="activity_main_scan_filter">Enter name to filter scan </string>
    <string name="main_menu_control"> Control</string>
    <string name="listview_item_name">NAME</string>
    <string name="listview_item_address">ADDRESS</string>
    <string name="listview_item_power">POWER</string>
    <string name="listview_item_data">DATA</string>
    <string name="activity_main_direction_text">Direction</string>
    <string name="activity_main_send_button">SEND</string>
    <string name="activity_remote_control_speed_textview">Speed:</string>
</resources>
