<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/listview_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview_item_name" />

    <TextView
        android:id="@+id/listview_item_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview_item_address" />

    <TextView
        android:id="@+id/listview_item_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview_item_power" />

    <TextView
        android:id="@+id/listview_item_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview_item_data" />
</LinearLayout>